deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherforecast-deployment
  labels:
    app: weatherforecast
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weatherforecast
  template:
    metadata:
      labels:
        app: weatherforecast
    spec:
      containers:
      - name: weatherforecast
        image: himmut85/sampleapp:v1
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: weatherforecast
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 5000
  type: LoadBalancer
