ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - http:
      paths:
      - path: /WeatherForecast
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 6001
